--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "@google/generative-ai": "^0.1.3",
+    "body-parser": "^1.20.2"
   },
   "engines": {
     "node": "18.x"
